--- a/client/src/app/components/maestros/maestros.component.html
+++ b/client/src/app/components/maestros/maestros.component.html
@@ -15,7 +15,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a routerLink="/horario">Horarios</a></li>
         <li><a routerLink="/">Clases</a></li>
-        <li><a routerLink="/">Calificaciones</a></li>
+        <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
       </ul>
       <p style="text-align:center; margin-left:150px">Maestro</p>
     </div>
