--- a/client/src/app/components/admin-list/admin-list.component.html
+++ b/client/src/app/components/admin-list/admin-list.component.html
@@ -6,22 +6,36 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="nav-wrapper" style="background-color: #0066ff;">
-              <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-              <ul class="right hide-on-med-and-down">
-                <li><a routerLink="/usuarios-list">Users</a></li>
-                <li><a routerLink="/admins-list">Administradores</a></li>
-                <li><a routerLink="/alumnos-list">Alumnos</a></li>
-                <li><a routerLink="/maestros-list">Maestros</a></li>
-                <li><a routerLink="/horario">Horarios</a></li>
-                <li><a routerLink="/">Calificaciones</a></li>
-              </ul>
-            </div>
-          </nav>
-        </header>
+  <header>
+    <nav>
+      <div class="nav-wrapper" style="background-color: #0066ff">
+        <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
+
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+        <ul class="right hide-on-med-and-down">
+          <li><a routerLink="/usuarios-list">Users</a></li>
+          <li><a routerLink="/admins-list">Administradores</a></li>
+          <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+            <ul class="dropdown">
+              <li><a routerLink="/usuarios-list">Users</a></li>
+              <li><a routerLink="/admins-list">Administradores</a></li>
+            </ul>
+          </li>
+          
+          <li><a routerLink="/maestros-list">Maestros</a></li>
+          <li class="has-dropdown"><a routerLink="">Horarios</a>
+            <ul class="dropdown">
+              <li><a routerLink="/horario-form">Agregar Horario</a></li>
+              <li><a routerLink="/horario">Ver Horarios</a></li>
+            </ul>
+          </li>
+          <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
         <input
         type="text" style="height: 35px; width: 800px; margin-left: 20%;"placeholder="Search" [(ngModel)]="filterPost"
         class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
