--- a/client/src/app/components/alumnos-list/alumnos-list.component.html
+++ b/client/src/app/components/alumnos-list/alumnos-list.component.html
@@ -8,18 +8,30 @@
 <body>
   <header>
     <nav>
-      <div class="nav-wrapper" style="background-color: #0066ff;">
+      <div class="nav-wrapper" style="background-color: #0066ff">
         <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
 
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
         <ul class="right hide-on-med-and-down">
           <li><a routerLink="/usuarios-list">Users</a></li>
           <li><a routerLink="/admins-list">Administradores</a></li>
-          <li><a routerLink="/alumnos-list">Alumnos</a></li>
-          <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li><a routerLink="/horario">Horarios</a></li>
-          <li><a routerLink="/">Calificaciones</a></li>
+          <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+            <ul class="dropdown">
+              <li><a routerLink="/usuarios-list">Users</a></li>
+              <li><a routerLink="/admins-list">Administradores</a></li>
+            </ul>
+          </li>
           
+          <li><a routerLink="/maestros-list">Maestros</a></li>
+          <li class="has-dropdown"><a routerLink="">Horarios</a>
+            <ul class="dropdown">
+              <li><a routerLink="/horario-form">Agregar Horario</a></li>
+              <li><a routerLink="/horario">Ver Horarios</a></li>
+            </ul>
+          </li>
+          <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
         </ul>
       </div>
     </nav>
@@ -56,7 +68,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0]|filterAlumno:filterPost">
+              <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0]">
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ alumno.first_name_A }}</td>
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                   
