--- a/client/src/app/components/calificaciones-list/calificaciones-list.component.html
+++ b/client/src/app/components/calificaciones-list/calificaciones-list.component.html
@@ -8,18 +8,30 @@
 <body>
   <header>
     <nav>
-      <div class="nav-wrapper" style="background-color: #0066ff;">
+      <div class="nav-wrapper" style="background-color: #0066ff">
         <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
 
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
         <ul class="right hide-on-med-and-down">
           <li><a routerLink="/usuarios-list">Users</a></li>
           <li><a routerLink="/admins-list">Administradores</a></li>
-          <li><a routerLink="/alumnos-list">Alumnos</a></li>
-          <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li><a routerLink="/horario">Horarios</a></li>
-          <li><a routerLink="/">Calificaciones</a></li>
+          <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+            <ul class="dropdown">
+              <li><a routerLink="/usuarios-list">Users</a></li>
+              <li><a routerLink="/admins-list">Administradores</a></li>
+            </ul>
+          </li>
           
+          <li><a routerLink="/maestros-list">Maestros</a></li>
+          <li class="has-dropdown"><a routerLink="">Horarios</a>
+            <ul class="dropdown">
+              <li><a routerLink="/horario-form">Agregar Horario</a></li>
+              <li><a routerLink="/horario">Ver Horarios</a></li>
+            </ul>
+          </li>
+          <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
         </ul>
       </div>
     </nav>
