--- a/client/src/app/components/horarios/horarios.component.html
+++ b/client/src/app/components/horarios/horarios.component.html
@@ -10,17 +10,30 @@
 <body>
   <header>
     <nav>
-      <div class="nav-wrapper" style="background-color: #0066ff;">
+      <div class="nav-wrapper" style="background-color: #0066ff">
         <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
         <ul class="right hide-on-med-and-down">
           <li><a routerLink="/usuarios-list">Users</a></li>
           <li><a routerLink="/admins-list">Administradores</a></li>
-          <li><a routerLink="/alumnos-list">Alumnos</a></li>
+          <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+            <ul class="dropdown">
+              <li><a routerLink="/usuarios-list">Users</a></li>
+              <li><a routerLink="/admins-list">Administradores</a></li>
+            </ul>
+          </li>
+          
           <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li><a routerLink="/horario">Horarios</a></li>
-          <li><a routerLink="/">Calificaciones</a></li>
-
+          <li class="has-dropdown"><a routerLink="">Horarios</a>
+            <ul class="dropdown">
+              <li><a routerLink="/horario-form">Agregar Horario</a></li>
+              <li><a routerLink="/horario">Ver Horarios</a></li>
+            </ul>
+          </li>
+          <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
         </ul>
       </div>
     </nav>
@@ -66,6 +79,7 @@
                   {{horario.Hora_inicio.substring(0, 5)+ horario.Hora_inicio.substring(15)}} - 
                   {{horario.Hora_final.substring(0, 5)+ horario.Hora_final.substring(15)}}
                 </td>
+                
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap" >
                   <p *ngIf="horario.dia==='Monday-Wednesday'"> Language :{{horario.idioma}} </p> <br>
                   <p *ngIf="horario.dia==='Monday-Wednesday'"> Level : {{horario.nivel}} </p> <br>
