--- a/client/src/app/components/users/users.component.html
+++ b/client/src/app/components/users/users.component.html
@@ -17,10 +17,21 @@
         <ul class="right hide-on-med-and-down">
           <li><a routerLink="/usuarios-list">Users</a></li>
           <li><a routerLink="/admins-list">Administradores</a></li>
-          <li><a routerLink="/alumnos-list">Alumnos</a></li>
+          <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+            <ul class="dropdown">
+              <li><a routerLink="/usuarios-list">Users</a></li>
+              <li><a routerLink="/admins-list">Administradores</a></li>
+            </ul>
+          </li>
+          
           <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li><a routerLink="/horario">Horarios</a></li>
-          <li><a routerLink="/">Calificaciones</a></li>
+          <li class="has-dropdown"><a>Horarios</a>
+            <ul class="dropdown">
+              <li><a routerLink="/horario-form">Agregar Horario</a></li>
+              <li><a routerLink="/horario">Ver Horarios</a></li>
+            </ul>
+          </li>
+          <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
         </ul>
       </div>
     </nav>
