--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+.has-dropdown .dropdown {
+    display: none;
+    /* Oculta la lista desplegable por defecto */
+
+
+
+    background-color: #1a1dbe;
+
+}
+
+.has-dropdown:hover .dropdown {
+    position: absolute;
+    display: flex;
+    
+    
+
+}
+
+.has-dropdown:hover .dropdown li {
+   
+    display: inline-flex;
+    /* Muestra la lista desplegable cuando se hace hover sobre el elemento padre */
+    flex-direction: column;
+    z-index: 0;
+
+}
+
+.has-dropdown:hover .dropdown a {
+   
+    display: block;
+    /* Muestra la lista desplegable cuando se hace hover sobre el elemento padre */
+    z-index: 0;
+    color: aqua;
+    font-size: small;
+}
+.has-dropdown[_ngcontent-ng-c807545983]:hover .dropdown[_ngcontent-ng-c807545983] {
+    position: absolute;
+    display: flex;
+    flex-direction: column !important;
+}
